; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_copyio.c_copyin_word.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/arm64/extr_copyio.c_copyin_word.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@COPYIO_IN_WORD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @copyin_word(i32 %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  %10 = icmp ne i32 %9, 4
  br i1 %10, label %11, label %16

11:                                               ; preds = %3
  %12 = load i32, i32* %7, align 4
  %13 = icmp ne i32 %12, 8
  br i1 %13, label %14, label %16

14:                                               ; preds = %11
  %15 = load i32, i32* @EINVAL, align 4
  store i32 %15, i32* %4, align 4
  br label %44

16:                                               ; preds = %11, %3
  %17 = load i32, i32* %5, align 4
  %18 = load i32, i32* %7, align 4
  %19 = sub nsw i32 %18, 1
  %20 = and i32 %17, %19
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %16
  %23 = load i32, i32* @EINVAL, align 4
  store i32 %23, i32* %4, align 4
  br label %44

24:                                               ; preds = %16
  %25 = load i32, i32* %5, align 4
  %26 = load i32*, i32** %6, align 8
  %27 = ptrtoint i32* %26 to i64
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @copyin_validate(i32 %25, i64 %27, i32 %28)
  store i32 %29, i32* %8, align 4
  %30 = load i32, i32* %8, align 4
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %34

32:                                               ; preds = %24
  %33 = load i32, i32* %8, align 4
  store i32 %33, i32* %4, align 4
  br label %44

34:                                               ; preds = %24
  %35 = load i32, i32* @COPYIO_IN_WORD, align 4
  %36 = load i32, i32* %5, align 4
  %37 = sext i32 %36 to i64
  %38 = inttoptr i64 %37 to i8*
  %39 = load i32*, i32** %6, align 8
  %40 = ptrtoint i32* %39 to i64
  %41 = inttoptr i64 %40 to i8*
  %42 = load i32, i32* %7, align 4
  %43 = call i32 @copyio(i32 %35, i8* %38, i8* %41, i32 %42, i32* null)
  store i32 %43, i32* %4, align 4
  br label %44

44:                                               ; preds = %34, %32, %22, %14
  %45 = load i32, i32* %4, align 4
  ret i32 %45
}

declare dso_local i32 @copyin_validate(i32, i64, i32) #1

declare dso_local i32 @copyio(i32, i8*, i8*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
